--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -292,7 +292,7 @@ h5{
   }
 .story-section{
     width: 100%;
-    height: 29.125rem;
+    height: 100%;
     background: url('../images/bg/bg-2.jpg') no-repeat center;
     background-size: cover;
     padding-top: 100px;
